# vlogger

./: CMakeLists.txt  README.md
include/: vlogger.hpp
src/: vlogfilewriter.cpp  vlogfilewriter.hpp  vlogger.cpp
test/: test_vlogger.cpp
